--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,13 +15,22 @@ jobs:
         with:
           python-version: '3.10'
       
+      - name: Cache game data
+        uses: actions/cache@v3
+        with:
+          path: games_cache.json
+          key: ${{ runner.os }}-games-${{ hashFiles('epic_notifier.py') }}
+      
       - name: Install dependencies
         run: pip install requests
       
       - name: Run notifier
         env:
           SERVER_CHAN_KEY: ${{ secrets.SERVER_CHAN_KEY }}
+        run: python epic_notifier.py
+      
+      - name: Debug output
         run: |
-          python epic_notifier.py
-          echo "=== Debug Info ==="
-          [ -f "games_cache.json" ] && jq '.' games_cache.json || echo "No cache file"
+          echo "=== Current Games ==="
+          [ -f "games_cache.json" ] && jq '.[].title' games_cache.json || echo "No cache"
+          echo "====================="
